# wavekat-vad

./: .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  vad-accuracy.yml
crates/wavekat-vad/: CHANGELOG.md  Cargo.toml  build.rs
crates/wavekat-vad/benches/: vad_comparison.rs
crates/wavekat-vad/examples/: detect_speech.rs  firered_file.rs  ten_vad_file.rs
crates/wavekat-vad/src/: adapter.rs  error.rs  frame.rs  lib.rs
crates/wavekat-vad/src/backends/: mod.rs  onnx.rs  silero.rs  ten_vad.rs  ten_vad_onnx.rs  webrtc.rs
crates/wavekat-vad/src/backends/firered/: cmvn.rs  fbank.rs  mod.rs
crates/wavekat-vad/src/preprocessing/: biquad.rs  denoise.rs  mod.rs  normalize.rs  resample.rs
crates/wavekat-vad/tests/: accuracy-baseline.json  accuracy.rs
docs/: firered-vad-implementation-plan.md  plan.md  preprocessing-plan.md  publication-plan.md  silero-implementation-plan.md  video-script-firered-vad.md
docs/experiments/: 2026-03-20-ten-vad-integration.md  2026-03-25-firered-vad-parity.md
scripts/: README.md
scripts/firered/: fbank_details.py  reference.py  validate_upstream.py
testdata/firered_reference/: README.md  ref_cmvn.json  ref_fbank.json  ref_probs.json  ref_samples.json  ref_upstream_probs.json
tools/vad-lab/: README.md
tools/vad-lab/backend/: Cargo.toml  build.rs
tools/vad-lab/backend/src/: audio_source.rs  main.rs  pipeline.rs  session.rs  spectrum.rs  ws.rs
tools/vad-lab/frontend/: index.html  package-lock.json  package.json  vite.config.ts
tools/vad-lab/frontend/src/: App.tsx
tools/vad-lab/frontend/src/components/: ConfigPanel.tsx  FrequencySpectrum.tsx  LogPanel.tsx  VadTimeline.tsx  Waveform.tsx  ZoomControls.tsx
tools/vad-lab/frontend/src/lib/: useAudioPlayback.ts  viewport.ts  websocket.ts
