[workspace]
members = ["crates/wavekat-vad", "tools/vad-lab/backend"]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
