[package]
name = "wavekat-vad"
version = "0.1.0"
edition = "2021"
description = "Unified voice activity detection with multiple backends"
license = "MIT"

[features]
default = ["webrtc"]
webrtc = ["dep:webrtc-vad"]
silero = ["dep:ort", "dep:ndarray"]
denoise = ["dep:nnnoiseless", "dep:rubato"]
ten-vad = []  # links prebuilt C library via build.rs
ten-vad-onnx = ["dep:ort", "dep:ndarray", "dep:realfft"]  # pure Rust ONNX implementation

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
webrtc-vad = { version = "0.4", optional = true }
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
ndarray = { version = "0.17", optional = true }
nnnoiseless = { version = "0.5", optional = true }
rubato = { version = "0.16", optional = true }
realfft = { version = "3", optional = true }

[build-dependencies]
ureq = "3"

[dev-dependencies]
criterion = "0.5"
hound = { workspace = true }

[[bench]]
name = "vad_comparison"
harness = false
