[package]
name = "vad-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
wavekat-vad = { path = "../../../crates/wavekat-vad", features = ["webrtc", "silero", "denoise", "ten-vad"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
cpal = "0.16"
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
mime_guess = "2"
rustfft = "6"
rubato = "0.16"
